--- a/web.config
+++ b/web.config
@@ -9,6 +9,11 @@
    providerName="System.Data.SqlClient" />
  </connectionStrings>
  <system.web>
+   <pages>
+     <controls>
+       <add tagPrefix="ss" src="~/SaleItemControl.ascx" tagName="saleItem"/>
+     </controls>
+   </pages>
 		<compilation debug="true" targetFramework="4.0"/>
 	</system.web>
 </configuration>
