--- a/web.config
+++ b/web.config
@@ -12,6 +12,7 @@
    <pages>
      <controls>
        <add tagPrefix="ss" src="~/SaleItemControl.ascx" tagName="saleItem"/>
+       <add tagPrefix="ss" src="~/CommentItem.ascx" tagName="commentItem"/>
      </controls>
    </pages>
 		<compilation debug="true" targetFramework="4.0"/>
