--- a/web.config
+++ b/web.config
@@ -4,17 +4,17 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-  <add name="DatabaseSuperStoreConnectionString1" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\DatabaseSuperStore.mdf;Integrated Security=True"
-   providerName="System.Data.SqlClient" />
- </connectionStrings>
- <system.web>
-   <pages>
-     <controls>
-       <add tagPrefix="ss" src="~/SaleItemControl.ascx" tagName="saleItem"/>
-       <add tagPrefix="ss" src="~/CommentItem.ascx" tagName="commentItem"/>
-     </controls>
-   </pages>
-		<compilation debug="true" targetFramework="4.0"/>
-	</system.web>
+  <connectionStrings>
+    <add name="DatabaseSuperStoreConnectionString1" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\DatabaseSuperStore.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <system.web>
+    <pages>
+      <controls>
+        <add tagPrefix="ss" tagName="saleItem" src="~/SaleItemControl.ascx" />
+        <add tagPrefix="ss" tagName="commentItem" src="~/CommentItem.ascx" />
+      </controls>
+    </pages>
+    <compilation debug="true" targetFramework="4.0">
+    </compilation>
+  </system.web>
 </configuration>
